[package]
name = "voidleo"
version = "0.1.0"
authors = ["leorii"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8.6"
serde_json = "1.0.57"
serde = { version = "1.0.114", features = ["derive"] }
ron = "0.6.0"
lazy_static = "1.4.0"
